Making Logger match LessonLogger from java lessons