@@ -4,19 +4,18 @@ import edu.wpi.first.wpilibj.smartdashboard.SmartDashboard;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.PrintStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Set;
 
 public abstract class LessonBase {
 
     private final Map<String, Object> previousValues = new HashMap<>();
-    private final PrintStream logOut;
+    private LessonLogger lessonLogger;
+    private FileOutputStream fileOutStream;
 
     // Logging rate control
     private static final int MOD = 47;
@@ -24,32 +23,40 @@ public abstract class LessonBase {
     private int modCounter = 0;
     private int modResetCount = 0;
 
+    private static final int HYPHEN_SEPARATOR_LENGTH = 80;
+
     protected LessonBase() {
-        logOut = createLogFile();
+        initLogger();
     }
 
-    private PrintStream createLogFile() {
+    private void initLogger() {
         try {
-            String pkg = getClass().getPackageName().replace('.', '_');
-            String ts = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss"));
-            String logFileName = pkg + "_" + ts + ".log";
+            String pkgName = getClass().getPackageName();
+            String logFileName = String.format("%s-output.log", pkgName);
 
-            Path logFile = Path.of(logFileName);
-            if (!Files.exists(logFile)) {
-                Files.createFile(logFile);
+            Path logFile = Paths.get(logFileName);
+            boolean fileExists = Files.exists(logFile);
+
+            fileOutStream = new FileOutputStream(logFile.toFile(), true);
+
+            if (fileExists) {
+                String separator = "-".repeat(HYPHEN_SEPARATOR_LENGTH) + System.lineSeparator();
+                fileOutStream.write(separator.getBytes(StandardCharsets.UTF_8));
+                fileOutStream.flush();
             }
 
-            PrintStream ps = new PrintStream(new FileOutputStream(logFile.toFile(), true), true);
-            ps.printf("=== Logging started for %s at %s ===%n", pkg, ts);
-            return ps;
+            lessonLogger = new LessonLogger(fileOutStream);
+
         } catch (IOException e) {
-            return null;
+            e.printStackTrace();
+            lessonLogger = null;
         }
     }
 
     public void logSmartDashboardChanges() {
-        if (logOut == null) return;
+        if (lessonLogger == null) return;
 
+        // Rate limiting
         modCounter = (modCounter + 1) % MOD;
         if (modCounter != 0) return;
 
@@ -63,12 +70,10 @@ public abstract class LessonBase {
 
                 Object previous = previousValues.get(key);
                 if (previous == null || !previous.equals(current)) {
-                    String ts = LocalDateTime.now()
-                            .format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS"));
-                    logOut.printf("[%s] %s: %s -> %s%n", ts, key, previous, current);
+                    lessonLogger.log(key, current.getClass().getSimpleName(), current.toString());
                     previousValues.put(key, current);
                 }
-            } catch (IllegalArgumentException ignored) {
+            } catch (IllegalArgumentException e) {
                 
             }
         }
@@ -88,17 +93,17 @@ public abstract class LessonBase {
         return null;
     }
 
-    public void setup() {
-        
-    }
+    public void setup() {}
 
     public abstract void execute();
 
     public void cleanup() {
-        if (logOut != null) {
-            logOut.println("=== Lesson ended ===");
-            logOut.flush();
-            logOut.close();
+        if (fileOutStream != null) {
+            try {
+                fileOutStream.close();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
         }
     }
 }
